# qt-treeview-example

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
 src/: main.cpp
res/: CMakeLists.txt
src/: main.cpp  om_data_model.cpp  om_data_model.h  om_data_provider_injector.h  om_tree_delegate.cpp  om_tree_delegate.h  om_tree_view.cpp  om_tree_view.h
src/dataproviders/: i_om_data_provider.h  sqlite_om_data_provider.cpp  sqlite_om_data_provider.h
src/tests/: mock_data_provider_om_filled.cpp  mock_data_provider_om_filled.h
